--- a/style.css
+++ b/style.css
@@ -104,6 +104,43 @@ figure img {
   margin: 0 0 32px;
 }
 
+.myimg {
+  margin-top: 20px;
+  box-sizing: border-box;
+  background: #f2f4f6;;
+  box-shadow: 1px 1px 30px rgba(75, 75, 75, 0.356);
+  border-radius: 10px;
+  width: 525px;
+  margin: 0 auto;
+}
+
+.about {
+  margin-top: 32px;
+  box-sizing: border-box;
+  background: #f2f4f6;;
+  box-shadow: 1px 1px 20px rgba(75, 75, 75, 0.356);
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.useful {
+  margin-top: 20px;
+  box-sizing: border-box;
+  background: #f2f4f6;;
+  box-shadow: 1px 1px 20px rgba(75, 75, 75, 0.356);
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.skills {
+  margin-top: 20px;
+  box-sizing: border-box;
+  background: #f2f4f6;;
+  box-shadow: 1px 1px 20px rgba(75, 75, 75, 0.356);
+  border-radius: 10px;
+  padding: 10px;
+}
+
 .skills-list {
   margin: 0;
   padding: 0;
@@ -121,6 +158,12 @@ figure img {
 
 .skill-css {
   background-image: url("img/icon-css.svg");
+}
+
+.skill-js {
+  background-image: url("img/icon-js.svg");
+  width: 24px;
+  height: 28px;
 }
 
 .level {
@@ -196,4 +239,40 @@ figure img {
 .footer-phone {
   padding-left: 25px;
   background-image: url("img/icon-phone-footer.svg");
+}
+
+@media (max-width: 667px) {
+
+  .page-header {
+    font-size: 26px;
+  }
+
+  .about {
+    font-size: 26px;
+    text-align: center;
+  }
+
+  .useful {
+    text-align: center;
+    font-size: 26px;
+  }
+
+  .intro h3 {
+    font-size: 32px;
+    text-align: center;
+  }
+
+  .skills-adapt {
+    font-size: 28px;
+    margin-bottom: 10px;
+  }
+
+  .page-footer {
+    font-size: 26px;
+  }
+
+  .portfolio h3 {
+    font-size: 32px;
+  }
+
 }
