--- a/source/simplelayout/scss/style.css
+++ b/source/simplelayout/scss/style.css
@@ -29,9 +29,10 @@ body {
 
 .header-title {
   padding: 50px 0 0 50px;
-  margin: 0 0 51px 0;
+  margin: 0 0 31px 0;
   font-size: 59px;
   font-weight: normal;
+  line-height: 0.8;
 }
 
 .header-list {
@@ -306,16 +307,7 @@ body {
 }
 
 .cards-standart {
-  width: 300px;
-  min-height: 306px;
   background-color: #445161;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   border-radius: 5px;
 }
 
@@ -368,30 +360,12 @@ body {
 }
 
 .cards-premium {
-  width: 300px;
-  min-height: 406px;
   background-color: #445162;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   border-radius: 5px;
 }
 
 .cards-lux {
-  width: 300px;
-  min-height: 499px;
   background-color: #445162;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   border-radius: 5px;
 }
 
