--- a/source/simplelayout/scss/style.scss
+++ b/source/simplelayout/scss/style.scss
@@ -28,9 +28,10 @@ body {
 
 .header-title {
     padding: 50px 0 0 50px;
-    margin: 0 0 51px 0;
+    margin: 0 0 31px 0;
     font-size: 59px;
     font-weight: normal;
+    line-height: 0.8;
 }
 
 .header-list {
@@ -281,11 +282,7 @@ body {
 }
 
 .cards-standart {
-    width: 300px;
-    min-height: 306px;
     background-color: #445161;
-    display: flex;
-    flex-direction: column;
     border-radius: 5px;
 }
 
@@ -332,20 +329,12 @@ body {
 }
 
 .cards-premium {
-    width: 300px;
-    min-height: 406px;
     background-color: $grey;
-    display: flex;
-    flex-direction: column;
     border-radius: 5px;
 }
 
 .cards-lux {
-    width: 300px;
-    min-height: 499px;
     background-color: $grey;
-    display: flex;
-    flex-direction: column;
     border-radius: 5px;
 }
 
